[workspace]

members = [
    "plugins/graphql-client",
    "plugins/graphql-schema-visualization",
    "deployment"
]
resolver = "3"

[workspace.package]
version = "0.10.0"
authors = ["Andreas Schaeffer <hanack@nooblounge.net>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/reactive-graph/tooling"
homepage = "https://tooling.reactive-graph.io/"
keywords = ["graph", "reactive", "control-flow", "inexor"]
rust-version = "1.85.0"

[workspace.dependencies]
async-trait = "0.1"
http = "0.2"
log = { version = "0.4", features = ["std", "serde"] }
log4rs = { version = "1.2", features = ["console_appender", "file_appender", "toml_format"] }
mime_guess = "2.0"
rust-embed = { version = "8.0", features = ["debug-embed", "compression"] }
serde = { version = "1.0", features = ["derive"] }
springtime = "1.0"
springtime-di = { version = "1.0", default-features = false, features = ["threadsafe", "derive"] }
toml = "0.8"
uuid = { version = "1.2", features = ["serde", "v4", "v5"] }

### Prefer git to crates.io for development

reactive-graph-behaviour-model-api = { version = "0.10.0", git = "https://github.com/reactive-graph/reactive-graph.git" }
reactive-graph-behaviour-model-impl = { version = "0.10.0", git = "https://github.com/reactive-graph/reactive-graph.git" }
reactive-graph-behaviour-service-api = { version = "0.10.0", git = "https://github.com/reactive-graph/reactive-graph.git" }
reactive-graph-config-model = { version = "0.10.0", git = "https://github.com/reactive-graph/reactive-graph.git" }
reactive-graph-graph = { version = "0.10.0", git = "https://github.com/reactive-graph/reactive-graph.git" }
reactive-graph-runtime-model = { version = "0.10.0", git = "https://github.com/reactive-graph/reactive-graph.git" }
reactive-graph-plugin-api = { version = "0.10.0", git = "https://github.com/reactive-graph/reactive-graph.git" }
reactive-graph-plugin-derive = { version = "0.10.0", git = "https://github.com/reactive-graph/reactive-graph.git" }
reactive-graph-reactive-model-api = { version = "0.10.0", git = "https://github.com/reactive-graph/reactive-graph.git" }
reactive-graph-reactive-model-impl = { version = "0.10.0", git = "https://github.com/reactive-graph/reactive-graph.git" }
reactive-graph-reactive-service-api = { version = "0.10.0", git = "https://github.com/reactive-graph/reactive-graph.git", features = ["derive"] }
reactive-graph-reactive-service-impl = { version = "0.10.0", git = "https://github.com/reactive-graph/reactive-graph.git" }
reactive-graph-type-system-api = { version = "0.10.0", git = "https://github.com/reactive-graph/reactive-graph.git", features = ["json5", "toml"] }
reactive-graph-lifecycle = { version = "0.10.0", git = "https://github.com/reactive-graph/reactive-graph.git" }
reactive-graph-test-utils = { version = "0.10.0", git = "https://github.com/reactive-graph/reactive-graph.git" }

### Prefer local to git for local development

#reactive-graph-behaviour-model-api = { version = "0.10.0", path = "../inexor-rgf/crates/behaviour/model/api" }
#reactive-graph-behaviour-model-impl = { version = "0.10.0", path = "../inexor-rgf/crates/behaviour/model/impl" }
#reactive-graph-behaviour-service-api = { version = "0.10.0", path = "../inexor-rgf/crates/behaviour/service/api" }
#reactive-graph-config-model = { version = "0.10.0", path = "../inexor-rgf/crates/config/model" }
#reactive-graph-graph = { version = "0.10.0", path = "../inexor-rgf/crates/graph" }
#reactive-graph-plugin-api = { version = "0.10.0", path = "../inexor-rgf/crates/plugin/api" }
#reactive-graph-plugin-derive = { version = "0.10.0", path = "../inexor-rgf/crates/plugin/derive" }
#reactive-graph-reactive-model-api = { version = "0.10.0", path = "../inexor-rgf/crates/reactive/model/api" }
#reactive-graph-reactive-model-impl = { version = "0.10.0", path = "../inexor-rgf/crates/reactive/model/impl" }
#reactive-graph-reactive-service-api = { version = "0.10.0", path = "../inexor-rgf/crates/reactive/service/api", features = ["derive"] }
#reactive-graph-reactive-service-impl = { version = "0.10.0", path = "../inexor-rgf/crates/reactive/service/impl" }
#reactive-graph-runtime-api = { version = "0.10.0", path = "../inexor-rgf/crates/runtime/api" }
#reactive-graph-runtime-model = { version = "0.10.0", path = "../inexor-rgf/crates/runtime/model" }
#reactive-graph-type-system-api = { version = "0.10.0", path = "../inexor-rgf/crates/type-system/api", features = ["json5", "toml"] }
#reactive-graph-lifecycle = { version = "0.10.0", path = "../inexor-rgf/crates/lifecycle" }
#reactive-graph-test-utils = { version = "0.10.0", path = "../inexor-rgf/crates/test-utils" }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
strip = "symbols"
