[workspace]

members = [
    "plugins/graphql-client",
    "plugins/graphql-schema-visualization",
    "deployment"
]
resolver = "3"

[workspace.package]
version = "0.10.0"
authors = ["Andreas Schaeffer <hanack@nooblounge.net>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/reactive-graph/tooling"
homepage = "https://tooling.reactive-graph.io/"
keywords = ["graph", "reactive", "control-flow", "inexor"]
rust-version = "1.85.0"

[workspace.dependencies]
async-trait = "0.1"
http = "0.2"
log = { version = "0.4", features = ["std", "serde"] }
log4rs = { version = "1.2", features = ["console_appender", "file_appender", "toml_format"] }
mime_guess = "2.0"
rust-embed = { version = "8.7", features = ["debug-embed", "compression"] }
serde = { version = "1.0", features = ["derive"] }
springtime = "1.0"
springtime-di = { version = "1.0", default-features = false, features = ["threadsafe", "derive"] }
toml = "0.8"
uuid = { version = "1.17", features = ["serde", "v4", "v5"] }

### Prefer git to crates.io for development

reactive-graph-plugin-api = { version = "0.10.0", git = "https://github.com/reactive-graph/reactive-graph.git" }
reactive-graph-utils-deployment = { version = "0.10.0", git = "https://github.com/reactive-graph/reactive-graph.git" }

### Prefer local to git for local development

#reactive-graph-plugin-api = { version = "0.10.0", path = "../inexor-rgf/crates/plugin/api" }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
strip = "symbols"
